# OpenGL-Abstractions

./: .Render.png.icloud  .gitignore  .gitmodules  CMakeLists.txt  Camera3D.cpp  Camera3D.h  CubeMap.cpp  CubeMap.h  FrameBuffer.h  IndexBuffer.h  LICENSE  Label.h  Mesh.cpp  Model.h  README.md  RenderBuffer.h  Renderer.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h  fg.dot  imgui.ini  imgui_log.txt  shadows_fg.dot
OpenGL/: Camera3D.h  CubeMap.cpp  CubeMap.h  FrameBuffer.cpp  FrameBuffer.h  HDREnvironmentMap.cpp  HDREnvironmentMap.h  IndexBuffer.cpp  IndexBuffer.h  Label.cpp  Label.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PickingTexture.cpp  PickingTexture.h  RenderBuffer.cpp  RenderBuffer.h  Renderer.h  Rigidbody2D.cpp  Rigidbody2D.h  Shader.cpp  Shader.h  Texture2D.cpp  Texture2D.h  Texture3D.cpp  Texture3D.h  Transform.h  VertexArray.cpp  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h  glassert.h
src/: ExampleScene.h  Sandbox.h  SandboxSceneTemplate.h  main.cpp  prim_model.h
src/AdvancedGL/: AdvancedGLScene.h  Blending.h  BuffersVisualisation.h  NormalMapping.h  Outlining.h  PostProcessBuffers.h  Skybox.h
src/AdvancedLighting/: BlinnPhong.h  ShadowMapping.h
src/Lighting/: BasicLighting.h  Colors.h  LightCasters.h  LightMaps.h  Materials.h
src/models/: .Man.obj.icloud
src/models/Alien/: Alien.mtl
src/models/Stormtrooper/: .Stormtrooper_D.tga.icloud  .Stormtrooper_N.tga.icloud
src/models/shaders/: mesh.frag
src/models/shaders/Lighting/: directionalLight.frag  gourad.frag  lightMaps.frag  phong.frag  pointLight.frag  spotLight.frag
src/shaders/: mesh.frag  mesh.vert  outline.frag  texture.frag
src/shaders/Lighting/: directionalLight.frag  gourad.vert  lightMaps.frag  pointLight.frag  shadow.frag  spotLight.frag
src/utils/: cube.h  plane.h  quad.h  random.h
tests/: ExampleScene.h  MainSandbox.cpp  Sandbox.h  SandboxSceneTemplate.h  loadSponza.h  main.cpp  prim_model.h
tests/AdvancedGL/: Blending.h  BuffersVisualisation.h  DebugStuff.h  Deferred.h  InfiniteGrid.h  LODs.h  NormalMapping.h  Outlining.h  PostProcessBuffers.h  SSBOTest.h  SaveFBO.h  Skybox.h  ToneMapping.h  ToonShading.h  VXGI.h  Vignette.h
tests/AdvancedGL/PPFX/: Bloom.h  SSR.h  ToneMapping.h
tests/AdvancedGL/compute/: ComputeShaderDemo.h  ForwardPlusRenderer.h
tests/AdvancedLighting/: BlinnPhong.h  Deffered.h  HDRScene.h  PBRTexture.h  SSAOScene.h  ShadowMapping.h
tests/AdvancedLighting/PBR/: ChessBoardDemo.h  Demo_PBR_Deferred.h  DiffuseIBL.h  PBR.h  PBRCerberusDemo.h  PBRTexture.h  SpecularIBL.h
tests/FGTest/: FGTest.h
tests/Lighting/: BasicLighting.h  Colors.h  LightCasters.h  LightMaps.h  Materials.h
tests/Misc/: overdraw_vis.h
tests/RayTracing/: rtiaw.h
tests/Surfels/: surfels_main.h
tests/Surfels/Algorithms/: PackedLUT.cpp  PackedLUT.h
tests/Surfels/Core/: Color.hpp
tests/Surfels/Math/: AxisAlignedBox3D.cpp  AxisAlignedBox3D.h  SphericalHarmonics.cpp  SphericalHarmonics.h  Triangle.hpp  Triangle3D.cpp  Triangle3D.h
tests/Surfels/Scene/: Scene.cpp  Scene.h
tests/Surfels/Scene/Geometry/: MeshInstance.cpp  MeshInstance.h  SubMesh.cpp  SubMesh.h  SurfelMesh.cpp  SurfelMesh.h  Transformation.cpp  Transformation.hpp  Vertices.h
tests/Surfels/Scene/Lighting/: DirectionalLight.hpp  Light.hpp  PointLight.hpp  Surfel.hpp  SurfelCluster.hpp  SurfelClusterProjection.hpp
tests/Surfels/Utility/: OBJMeshLoader.cpp  OBJMeshLoader.h
tests/models/Stormtrooper/: Stormtrooper.mtl
tests/models/shaders/: mesh.vert  outline.frag  texture.frag
tests/models/shaders/Lighting/: material.frag
tests/shaders/: RTquad.frag  RTquad.vert  blur.frag  default.frag  default.vert  depthMapVis.frag  depthOnly.vert  edge.frag  empty.frag  grid.frag  grid.vert  infinitegrid.frag  infinitegrid.vert  lightAccumalation.frag  lightHeatMap.frag  lightHeatMap.vert  mesh.frag  mesh.vert  outline.frag  path_tracer.frag  picking.frag  picking.vert  quad.frag  quad.vert  selection.frag  selection.vert  sharpenkernel.frag  skybox.frag  skybox.vert
tests/shaders/Compute/: hello_compute.comp  light_culling.comp
tests/shaders/FX/: downsample.frag  ssao.frag  ssao_blur.frag  tonemapper.frag  upsample.frag  vignette.frag
tests/shaders/Lighting/: SSAO.frag  blinnPhong.frag  color.frag  deferred_shadows.frag  depthMap.vert  directionalLight.frag  gBuffer.frag  gBufferPointLight.frag  material.frag  phong.frag  pointLight.frag  pointLightNormal.frag  shadow.frag  shadow.vert
tests/shaders/PBR/: PBR.vert  PBRSpecularIBLTextured.frag  PBRTexture.frag  brdf.frag
tests/shaders/VXGI/: voxelization.frag  voxelization.geom  voxelization.vert
tests/textures/PBR/EnvMaps/Arches_E_PineTree/: Arches_E_PineTree.ibl  Arches_E_PineTree_3k 2.hdr
tests/utils/: cube.h  plane.h  quad.h  sphere.h
